--- a/hp-memory-game/src/index.css
+++ b/hp-memory-game/src/index.css
@@ -19,11 +19,20 @@ h1{
 .container {
     height: 700px;
     width: 700px;
-    background-color: red;
+    
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
+    gap: 1em;
 }
 .card{
     background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+}
+.card img {
+    max-width: 80%;
+    max-height: 80%;
 }
