--- a/hp-memory-game/src/index.css
+++ b/hp-memory-game/src/index.css
@@ -34,8 +34,32 @@ h1{
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+    transform: rotateY(180deg);
+    animation: 2s hideCard linear;
+    transition: transform 0.5s;
+}
+
+@keyframes hideCard {
+    0%, 70%{
+        transform: rotateY(0);
+    }
+    100%{
+        transform: rotateY(180deg);
+    }
 }
 .card img {
     max-width: 80%;
     max-height: 80%;
+    transform: scale(0);
+    animation: 2s hideImage linear;
+    transition: transform 0.5s;
+}
+
+@keyframes hideImage {
+    0%, 70%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(0);
+    }
 }
