logic to flip and check
implemented logic to flip the cards and check if they have the same id, if they do change bcolor to green and leave them solved, if they dont show red bcolor and then after 1ms set the state back to default(so not showing the img)

--- a/hp-memory-game/src/index.css
+++ b/hp-memory-game/src/index.css
@@ -63,3 +63,17 @@ h1{
         transform: scale(0);
     }
 }
+
+.card.active {
+    transform: rotateY(0);
+}
+.card.active img {
+    transform: scale(1);
+}
+.card.wrong {
+    
+    background-color: rgb(223, 67, 67);
+}
+.card.correct {
+    background-color: rgb(13, 88, 13);
+}
