--- a/hp-memory-game/src/index.css
+++ b/hp-memory-game/src/index.css
@@ -4,8 +4,7 @@
 }
 html, body {
     height: 100%;
-    overflow:auto
-    
+    overflow: auto;
 }
 body {
     background-color: #EEBA35;
@@ -13,23 +12,23 @@ body {
     justify-content: center;
     align-items: center;
 }
-h1{
+h1 {
     text-align: center;
     margin-bottom: 1em;
     margin-top: 2em;
 }
 
 .container {
-    height: 700px;
-    width: 700px;
-    
+    height: 600px;
+    width: 600px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 1em;
-    
+    margin-bottom: 2em;
 }
-.card{
+
+.card {
     background-color: #fff;
     display: flex;
     justify-content: center;
@@ -38,16 +37,19 @@ h1{
     transform: rotateY(180deg);
     animation: 2s hideCard linear;
     transition: transform 0.5s;
+    width: 150px; /* Set a fixed width */
+    height: 150px; /* Set a fixed height */
 }
 
 @keyframes hideCard {
-    0%, 70%{
+    0%, 70% {
         transform: rotateY(0);
     }
-    100%{
+    100% {
         transform: rotateY(180deg);
     }
 }
+
 .card img {
     max-width: 80%;
     max-height: 80%;
@@ -57,10 +59,10 @@ h1{
 }
 
 @keyframes hideImage {
-    0%, 70%{
+    0%, 70% {
         transform: scale(1);
     }
-    100%{
+    100% {
         transform: scale(0);
     }
 }
@@ -72,21 +74,20 @@ h1{
     transform: scale(1);
 }
 .card.wrong {
-    
     background-color: rgb(223, 67, 67);
 }
 .card.correct {
     background-color: rgb(13, 88, 13);
 }
 .reset-button {
-  top: 10px;
-  left: 10px;
-  border-style: solid;
-  justify-content: center;
-  padding: 1em;
-  border-radius: 10px;
-  
+    top: 10px;
+    left: 10px;
+    border-style: solid;
+    justify-content: center;
+    padding: 1em;
+    border-radius: 10px;
 }
+
 .holder {
     display: flex;
     gap: 1em;
