added greeting image
added extra image to show when visiting the main page...current issue is to make it disappear when the buttons are clicked...will fix later tonight

--- a/hp-memory-game/src/index.css
+++ b/hp-memory-game/src/index.css
@@ -121,3 +121,12 @@ h1 {
         height: 100px;
     }
 }
+.wizard {
+    width: 250px;
+    height: 250px;
+    position: relative;
+    place-self: center;
+    background: black;
+    border-radius: 50%
+    
+}
