added styling and small fix
added some styling and dynamic text for first time visit, fixed the issue where the buttons didnt work to switch between the image and the board...also added a small delay after the board is solved

--- a/hp-memory-game/src/index.css
+++ b/hp-memory-game/src/index.css
@@ -124,9 +124,20 @@ h1 {
 .wizard {
     width: 250px;
     height: 250px;
-    position: relative;
-    place-self: center;
+    
+   
     background: black;
     border-radius: 50%
     
+}
+.hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.text-animation {
+    margin-bottom: 2em;
+    margin-top: 2em;
+    align-self: center;
 }
